@@ -1,3 +1,9 @@
+2022-05-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/affine.R: Use inherits instead of class
+	* R/bermudan.R: Idem
+	* R/sabr.R: Idem
+
 2022-05-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* docker/ci/Dockerfile: Small update
